--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
+
 .App {
   text-align: center;
 }
@@ -45,11 +47,31 @@
   font-family: 'Times New Roman', Times, serif;
 }
 
+
+/* ==== CONTAINER ==== */
+.container {
+  background-color: aliceblue;
+  padding: 50px 50px;
+}
+
+
+
+
+
+
+
 /* ==== PRINTABLE SHEET ==== */
 .wrapper-sheet { 
   font-family: 'Times New Roman', Times, serif !important;
-  /* border: 1px solid red; */
+  border: 1px solid lightgray;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  padding: 20px 20px 150px 20px;
+  max-width: 1000px;
+  margin:auto;
+  min-width: 800px;
 }
+
+
 .wrapper-sheet #header {
   display: flex;
   justify-content: space-between;
@@ -115,4 +137,25 @@ height: 10px !important;
   text-align: left;
   padding-left: 5px;
   width: 265px;
+}
+
+.wrapper-sheet button{
+  position:fixed;
+  right:20px;
+  bottom:20px;
+  background-color: #62CCB1;
+  color:white;
+  border:2px solid transparent;
+  display: block;
+  height: 60px;
+  width: 60px;
+  font-size: 30px;
+  border-radius: 10px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+.wrapper-sheet button:hover{
+  background-color: white;
+  color:#62CCB1;
+  
 }
