--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,600&display=swap');
+
+
 
 .App {
   text-align: center;
@@ -48,27 +51,27 @@
 }
 
 
+
+
 /* ==== CONTAINER ==== */
 .container {
   background-color: aliceblue;
-  padding: 50px 50px;
+  margin: 0px;
+  padding: 50px;
+  width: 100%;
 }
-
-
-
-
 
 
 
 /* ==== PRINTABLE SHEET ==== */
 .wrapper-sheet { 
   font-family: 'Times New Roman', Times, serif !important;
-  border: 1px solid lightgray;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   padding: 20px 20px 150px 20px;
   max-width: 1000px;
-  margin:auto;
   min-width: 800px;
+  margin: auto;
+  background-color: white;
 }
 
 
@@ -157,5 +160,102 @@ height: 10px !important;
 .wrapper-sheet button:hover{
   background-color: white;
   color:#62CCB1;
+}
+
+
+/* ===== SHEET ====  */
+#printable {
+  width: 99% !important;
+  min-width: 100%;
+  max-width: 100%;
+  padding: 0;
+  box-shadow: none;
+}
+
+iframe {
+  display: none;
+}
+
+/* ==== Login ==== */
+
+.login-title{
+  font-family: 'DM Sans', sans-serif;
+  font-size:50px;
+  text-align: left;
   
 }
+
+.instructions{
+  font-family: 'DM Sans', sans-serif;
+  font-size:25px;
+}
+
+.login-button{
+  font-family: 'DM Sans', sans-serif;
+  font-size: 18px;
+  background-color: #62CCB1;
+  color: white;
+  padding: 6px 20px;
+  border: none;
+  border-radius: 155px;
+  cursor: pointer;
+  
+}
+
+.login-button:hover{
+  background-color: white;
+  color:#62CCB1;
+  border: 1px solid #62CCB1;
+}
+
+.numberBoxes{
+  font-family: 'DM Sans', sans-serif;
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
+  padding:10px;
+  box-sizing: border-box;
+
+ }
+
+
+ .outer-container {
+  display: flex;
+  width: 100%; 
+}
+
+.login-container{
+  /* flex: 0 0 66.66%; */
+  flex:1;
+  display:flex;
+  background-color: white;
+  /* float:right; */
+  /* width:66.66%; */
+  /* height:100vh; */
+  flex-direction:column; 
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+
+}
+
+.background-container{
+  flex: 0 0 10%;
+  
+  /* flex: 1; */  
+}
+
+.access-code-input {
+  width: 40px;
+  height: 40px; 
+  font-size: 20px;
+  font-family: 'DM Sans', sans-serif;
+  padding: 15px; 
+  margin: 5px; 
+  box-sizing: border-box;
+  border-radius: 5px;
+  appearance: none;
+  -webkit-appearance: none;
+  }
+
+  
